web.de connector

--- a/test/example_accounts.yml
+++ b/test/example_accounts.yml
@@ -58,4 +58,14 @@ gmx:
     -
       name: "FirstName2 LastName2"
       email_address: "firstname2@example.com"
-      
+
+web_de:
+  username: <changeme>
+  password: <changeme>
+  contacts:
+    -
+      name: "FirstName1 LastName1"
+      email_address: "firstname1@example.com"
+    -
+      name: "FirstName2 LastName2"
+      email_address: "firstname2@example.com"
