--- a/test/example_accounts.yml
+++ b/test/example_accounts.yml
@@ -69,3 +69,14 @@ web_de:
     -
       name: "FirstName2 LastName2"
       email_address: "firstname2@example.com"
+
+seznam:
+  username: <changeme>
+  password: <changeme>
+  contacts:
+    -
+      name: "FirstName1 LastName1"
+      email_address: "firstname1@example.com"
+    -
+      name: "FirstName2 LastName2"
+      email_address: "firstname2@example.com"
