--- a/test/example_accounts.yml
+++ b/test/example_accounts.yml
@@ -103,3 +103,15 @@ inbox_lt:
       name: "FirstName2 LastName2"
       email_address: "firstname2@example.com"
 
+tmobile_de:
+  username: <changeme>
+  password: <changeme>
+  contacts:
+    -
+      name: "FirstName1 LastName1"
+      email_address: "firstname1@example.com"
+    -
+      name: "FirstName2 LastName2"
+      email_address: "firstname2@example.com"
+
+
